--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,9 @@
 server.port=8090
+
+# Database
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5433\/platzi-market
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
