--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,1 +1,8 @@
 server.port=80
+# Database
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/platzi-market
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
