--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.profiles.active=dev
 server.servlet.context-path=/platzi-market/api
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.datasource.driver-class-name=org.postgresql.Driver
+`
